# lpap

./: .gitignore  AGENTS.md  LICENSE  README.md  pixi.toml  pyproject.toml
.github/workflows/: test.yml
bench/: bench_lpap.py
configs/training/: decoder.toml  energy_to_image.toml  energy_to_image_reflow.toml  image_autoencoder.toml  image_to_energy.toml  surrogate.toml
doc/: data-storage.md  glossary.md  image-to-energy-implementation.md  index.md  lpap.md  training-stack.md
notebooks/: synthetic_harmonics.py  train.py  train_surrogate.py  visualize_decoder.py  visualize_energy_to_image.py  visualize_energy_to_image_reflow.py  visualize_image_autoencoder.py  visualize_image_to_energy.py  visualize_surrogate.py
src/lpap/: __init__.py  checkpoints.py  data.py  decoder.py  decoder_training.py  energy_to_image_reflow_training.py  energy_to_image_training.py  flow.py  flow_training.py  hilbert.py  image_autoencoder_training.py  image_to_energy_training.py  ops.py  permutation.py  surrogate.py  surrogate_training.py  training.py  training_log.py  training_notebook.py  training_plots.py  (+3 more)
test/: test_checkpoints.py  test_data.py  test_decoder.py  test_decoder_training.py  test_energy_to_image_reflow_training.py  test_energy_to_image_training.py  test_flow.py  test_flow_config_roundtrip.py  test_hilbert.py  test_image_autoencoder_training.py  test_image_to_energy_training.py  test_lpap.py  test_permutation.py  test_surrogate.py  test_surrogate_training.py  test_training.py  test_training_log.py  test_training_notebook.py  test_training_plots.py  test_transformer.py
(+1 files in other folders)
