[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "lpap"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
  "jaxtyping>=0.3.7",
  "torch>=2.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/lpap/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"